--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "swr": "^1.3.0"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-modal": "^3.16.3",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "typescript": "^5"
