--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "aos": "^2.3.4",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.11.3",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
